gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/imports/issue23947a.d
version https://git-lfs.github.com/spec/v1
oid sha256:d8190f7d4e0ff65e10d90d51308a89c329936eafab6aa483f606cd157a5f3698
size 136
